feat(mojaloop/#3432): add metrics for quote handlers and models (#311)
* feat(mojaloop/#3432): add metrics for quote handlers and models

* chore(snapshot): 15.1.0-snapshot.0

* chore: test

* chore(snapshot): 15.1.0-snapshot.1

* chore: rc boolean
